# pucch-f2

./: CMakeLists.txt  README.md  graphics.py  run.sh
src/: codec_matrix.txt
src/app/: main.cpp
src/libs/avx_wrap/: CMakeLists.txt
src/libs/avx_wrap/include/: avx_wrap.hpp
src/libs/avx_wrap/src/: avx_wrap.cpp
src/libs/matrix/: CMakeLists.txt
src/libs/matrix/include/: matrix.hpp
src/libs/matrix/src/: matrix.cpp
src/shared/: awgn.cpp  awgn.hpp  b_codec.cpp  b_codec.hpp  orchest.cpp  orchest.hpp
src/shared/fmath/: fmath.cpp  fmath.hpp  fmath.tpp
